2005-01-17  Roland McGrath  <roland@redhat.com>

	* nscd/Makefile (LDLIBS-nscd): New variable.
	($(objpfx)nscd): Use that instead of selinux-LIBS.

	* Makeconfig (link-extra-libs): Define just as $(LDLIBS-$(@F)).
	(link-extra-libs-static): Define to $(link-extra-libs).
	(link-extra-libs-bounded): Likewise.

2005-01-17  Ulrich Drepper  <drepper@redhat.com>

	* include/link.h: Remove stray definition of pltenter.

2005-01-16  GOTO Masanori  <gotom@debian.or.jp>

	* sysdeps/unix/rewinddir.c: Reset filepos.
	* dirent/tst-seekdir.c: Check telldir value after calling rewinddir.

2005-01-15  Ulrich Drepper  <drepper@redhat.com>

	* elf/tst-auditmod1.c: Reduce duplication.

2005-01-16  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/dl-machine.h: Remove trampoline code.  Define
	ARCH_LA_PLTENTER and ARCH_LA_PLTEXIT.
	(elf_machine_runtime_setup): If profile != 0 does not anymore mean
	GLRO(dl_profile) != NULL.
	* sysdeps/m68k/dl-trampoline.S: New file.
	* sysdeps/m68k/bits/link.h: New file.
	* sysdeps/generic/ldsodefs.h (struct audit_ifaces): Add m68k
	variants.
	* elf/tst-auditmod1.c: Add m68k support.

2005-01-14  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c [!_LIBC] (init_dfa): Fix determining of relevant
	LC_* variable.  Patch by Aharon Robbins <arnold@skeeve.com>.

	* stdlib/fmtmsg.c (internal_addseverity): Remove incorrect free call.
	* stdlib/tst-fmtmsg.c (main): Add another addseverity test.

2005-01-12  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): We don't have to allow
	callers from libc anymore.

	* elf/dl-open.c (dl_open_worker): Pass __RTLD_AUDIT flag from caller
	to _dl_map_object_deps.
	* elf/dl-load.c (_dl_map_object_from_fd): Don't change memory
	protections when loading auditing modules.

	* dlfcn/dlopen.c (dlopen_doit): Catch invalid mode arguments and fail.

	* posix/getconf.c: Update copyright year.
	* nss/getent.c: Likewise.
	* nscd/nscd_nischeck.c: Likewise.
	* iconv/iconvconfig.c: Likewise.