@@ -1,3 +1,11 @@
+2005-01-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* hurd/sigunwind.c (_hurdsig_longjmp_from_handler): Fix a typo
+	in assert.
+	* iconv/strtab.c (strtabfinalize): Likewise.
+
+	* libio/iofopncook.c (_IO_cookie_seekoff): Add prototype.
+
 2005-01-17  Roland McGrath  <roland@redhat.com>
 
 	* nscd/Makefile (LDLIBS-nscd): New variable.
